# smart-heaven-v2

./: .gitignore  AUTENTICACAO_README.md  ESTRUTURA_AUTH.txt  GUIA_RAPIDO_AUTH.md  README.md  api.ts  docker-compose.prod.yml  docker-compose.prod.yml.bak  docker-compose.yml  iniciar.bat  package.json  teste.txt
backend/: .env.example  Dockerfile  EVENT_SYSTEM_STATUS.md  alembic.ini  check_schema.py  create_users_table.sql  pyproject.toml  requirements.txt  test_auth.py  test_callmebot.ps1  test_register.ps1  test_register_detailed.ps1
backend/alembic/: env.py
backend/alembic/versions/: 20251203_1658_0b799ea7f365_initial_migration.py  20251208_1826_584cac1f73e2_add_mappings_table.py  20251209_0900_d15eff8184a8_add_button_events_table.py  20251209_1530_add_invertido_to_lampada.py  20251209_1813_5e82a13e85ca_add_apelido_to_lampada.py  20251209_2230_6942f735cdd1_add_users_table_only.py  20251209_2321_8b547115af5e_add_comodo_em_lampada.py  20251210_1344_01503a0dc8c5_add_table_casa.py  20251210_1351_f2a493ce5769_add_house_id_no_user.py  20251210_1357_24c2f294d27d_add_house_id.py  20251210_1905_b9720db985f1_id_house_nullable.py  20251211_1540_c8d1b2e3f4a5_make_button_events_id_house_nullable.py
backend/scripts/: add_missing_lamps.py  backup_database.py  check_lamp_states.py  cleanup_database.py  fix_lamp_names.py  mark_inverted_lamps.sql  test_insert_button_event.py  update_inverted_lamps.py
backend/src/: database.py  main.py
backend/src/controllers/: deps.py
backend/src/core/: config.py  dependencies.py
backend/src/infra/: db.py
backend/src/models/: __init__.py  (+16 more)
(+103 files in other folders)
