[project]
name = "smart-heaven-backend"
version = "2.0.0"
description = "Smart Heaven Home Automation Backend"
authors = [
    {name = "Pedro Lucas Araujo Menardi", email = "pedro@smart-heaven.com"}
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
